--- a/app.json
+++ b/app.json
@@ -35,7 +35,7 @@
     "formation": {
         "worker": {
             "quantity": 1,
-            "size": "free"
+            "size": "Basic"
         }
     },
     "stack": "heroku-20"
