--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "description": "Modular  Telegram Bot powered by @PyroGram!",
     "keywords": [
         "telegram",
-        "bot",
+        "Bot",
         "plugin",
         "modular",
         "productivity",
